fix button color and dimensions on iOS

--- a/index.css
+++ b/index.css
@@ -65,6 +65,11 @@ button {
    background-color: white;
    font-size: 1.75rem;
    font-weight: bold;
+   color: inherit;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   padding: 0;
 }
 
 button.roll-dice {
